--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Hehui Wu"
-  avatar           : "profile.jpeg"
+  avatar           : "profile.jpg"
   bio              : "A researcher in graph theory"
   location         : "Shanghai"
   employer         : "SCMS/Fudan University"
-  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
