--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,10 +2,10 @@
 
 Name Name:
   name        : "Hehui Wu"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  uri         : "http://hehuiwu.github.io"
+  email       : "hhwu@fudan.edu.cn"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "profile.jpg"
   twitter     : "name"
   google_plus : "Name"
 
