--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "A researcher in graph theory"
   location         : "Shanghai"
-  employer         : "SCMS/Fudan University"
+  employer         : "SCMS, Fudan University"
   pubmed           : 
   googlescholar    :  #"http://yourfullgooglescholarurl.com"
   email            :
